More edits to case study paper

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -14,7 +14,7 @@ In this section, we provide an overview of methods used to develop LRPs for our 
 \footnotesize   
 \caption{Overview of CU assessment methods applied for each case study (a) and approaches used to estimate LRPs (b) }
 \begin{tabular}{p{3.2cm} p{3.2cm} p{2.4cm} p{2.4cm} p{2.4cm}}
-\multicolumn{5}{l}{**(a) CU-level assessments** }\\
+\multicolumn{5}{l}{(a) CU-level assessments }\\
 \toprule
 \multicolumn{2}{l}{} & Interior Fraser River Coho & WCVI Chinook & Inside South Coast Chum \\
 \midrule
@@ -29,7 +29,7 @@ In this section, we provide an overview of methods used to develop LRPs for our 
 \multicolumn{2}{l}{Single metric approaches: distribution} & Yes & - & - \\
 \hline
 \multicolumn{5}{l}{ }\\
-\multicolumn{5}{l}{**(b) LRPs** }\\
+\multicolumn{5}{l}{(b) LRPs }\\
 \toprule
 \multicolumn{2}{l}{} & Interior Fraser River Coho & WCVI Chinook & Inside South Coast Chum \\
 \midrule
@@ -56,12 +56,9 @@ We consider two types of LRPs based on two different metrics:
 
 We propose that proportional LRPs are more appropriate for Pacific salmon SMUs in order to align with DFO's WSP; however, aggregate abundance LRP methods may be added to meet specific fisheries management requirements. 
 
-We implement proportion based LRP’s by adopting approaches developed to assess CU status under DFO's WSP [@dfoCanadaPolicyConservation2005; @holtIndicatorsStatusBenchmarks2009] and implemented for a subset of priority CUs [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @grant2017FraserSockeye2020]. These approaches use multiple metrics to evaluate status including trends in abundance and abundance metrics, and an expert driven integration approach to combine statuses across metrics into a single status for each CU. In our work, we rely on a recently developed approach that approximates these detailed status assessment methods using the Pacific Salmon Status Scanner tool (hereafter referred to as the 'Salmon Scanner'; Pestal et al., in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]). The Salmon Scanner allows us to rapidly generate up-to-date estimates of integrated CU status for all of our case study applications, and is recommended as an approach for defining LRPs in our companion working paper (Holt et al., in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->. 
+We implement proportional LRP’s using approaches developed to assess CU status under DFO's WSP [@dfoCanadaPolicyConservation2005; @holtIndicatorsStatusBenchmarks2009] and implemented for a subset of priority CUs [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @grant2017FraserSockeye2020]. These approaches use multiple metrics to evaluate status including trends in abundance and abundance metrics, and an expert driven integration approach to combine statuses across metrics into a single status for each CU. In our case study applications, we rely on the recently developed Pacific Salmon Status Scanner tool (hereafter referred to as the 'Salmon Scanner'; Pestal et al., in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]) as a way to rapidly approximate more detailed WSP status assessments. The Salmon Scanner allows us to rapidly generate up-to-date estimates of integrated CU status for all of our case study applications, and is recommended as an approach for defining LRPs in our companion working paper (Holt et al., in review).
 
-When developing aggregate abundance LRPs, estimates of CU status are based on a comparison of spawning abundance to a single lower benchmark for each CU in an SMU. Exceptions are described in the application to case studies. A variety of methods are available to estimate lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt et al. (in review). When developing aggregate abundance LRP options, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above Red status. 
-
-More detailed descriptions of each of these LRP estimation methods are provided in the following sections, while guidance on when and how proportional and aggregate abundance LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review).
-
+When developing aggregate abundance LRP options, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above Red status. However, estimates of CU status are based on a comparison of spawning abundance to a single lower benchmark for each CU rather than a multidimensional status estimate. Exceptions are described in the application to case studies. A variety of methods are available to estimate lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt et al. (in review). 
 
 <!--Carrie: can you please review the following two paragraphs to make sure you agree with my revisions.  
 
@@ -71,7 +68,12 @@ Also - I have not yet reponded to this comment from Chuck:
 
 We also maintain consistency with the WSP by only including spawning streams without significant enhancement when evaluating CU and SMU status. We use the Proportionate Natural Influence metric, PNI,as a basis for defining 'significant enhancement'. PNI is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. We defined 'significant enhancement' as PNI values < 0.5. Spawning streams with PNI estimated or assumed to be < 0.5 were excluded from case study analyses.
 
+
 Systems with levels of PNI > 0.5 can have hatchery influences; however, dynamics are predominately natural origin. PNI values $\geqslant$ 0.5 and < 0.72 indicate integrated-transition populations where natural-origin fish predominate, and values $\geqslant$ 0.72 indicate integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@dfoCanadaPolicyConservation2005; @withlerGeneticallyBasedTargets2018]. Fully wild populations are those that not have hatchery programs, and for which strays from out-of-basin hatchery production are limited to <3% per year [@withlerGeneticallyBasedTargets2018]. Where time-series of the proportion of hatchery marked fish on the spawning grounds are available (e.g., Interior Fraser Coho case study), these proportions are used to inform assessments in two ways: first to develop time-series of natural-origin recruitment for benchmark estimation based on stock-recruitment relationships and second to develop time series of natural-origin spawners for status assessment against benchmarks.  
+
+
+More detailed descriptions of each of the LRP estimation methods are provided in the following sections, while guidance on when and how proportional and aggregate abundance LRPs should be applied is provided in Holt et al. (in review). We recommend that users consult Holt et al. (in review) before applying any of the methods described in this case study paper.
+
 
 
 ## PROPORTIONAL LRPS
@@ -80,22 +82,21 @@ A proportional LRP was set as 100% of CUs above their red Red status zone. The L
 
 We compare three different methods of assessing CU status when using proportional LRPs: (i) the proportion of CUs with a recent WSP status assessment above the Red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent Salmon Scanner status assessment above Red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single CU lower benchmark (e.g., S\textsubscript{gen}, percentile-based benchmarks, etc.). We recommend applying methods (i) or (ii), and compare these with approach (iii).
 
-When assessing CU status relative to a single abundance-based lower benchmark in approach (iii), we use generational mean spawner abundances to compare to the benchmark. The use of generational means is consistent with the approach taken for abundance based benchmarks in WSP assessments and the Salmon Scanner tool (approaches i and ii). A generational mean integrates status over cohorts within a generation, which are generally independent of each other because of the anadromous, semelparous life-history of Pacific salmon and the dominance of a single age-at-maturity for many stocks [@holtIndicatorsStatusBenchmarks2009; @porsztReliabilityIndicatorsDecline2012]. As a result, generational smoothing reduces reduces noise in annual CU status determination arising from both interannual variability in CU abundances from different cohorts and annual observation error in estimated spawner abundances.
+When assessing CU status relative to a single abundance-based lower benchmark in approach (iii), we compare generational mean spawner abundances to the benchmark. The use of generational means is consistent with the approach taken for abundance-based benchmarks in WSP assessments and the Salmon Scanner tool (approaches i and ii). A generational mean integrates status over cohorts within a generation, which are generally independent of each other because of the anadromous, semelparous life-history of Pacific salmon and the dominance of a single age-at-maturity for many stocks [@holtIndicatorsStatusBenchmarks2009; @porsztReliabilityIndicatorsDecline2012]. As a result, generational smoothing reduces reduces noise in annual CU status determination arising from both interannual variability in CU abundances from different cohorts and annual observation error in estimated spawner abundances.
 
 
 ### PACIFIC SALMON STATUS SCANNER {#rapidToolMethods}
 
-One of the methods we consider to estimate CU status for proportional LRPs relies on a method of rapidly assessing CU status. We implement this approach using the Salmon Scanner that has recently been developed by DFO's State of the Salmon Program (Pestal et al., in prep). The Pacific Salmon Status Scanner (the Salmon Scanner) estimates statuses for individual WSP metrics and also integrates these statuses into a single status, approximating the more detailed, comprehensive WSP status assessment process. The metrics used to assess a CU’s status depends on the type of data available, whether an index of escapement or absolute abundance, and whether abundance benchmarks have been previous estimated. This approach automates the process to both assess status for individual metrics, and the integration process that combines these statuses into a single status for a CU. 
+The Pacific Salmon Status Scanner (the Salmon Scanner) estimates statuses for individual WSP metrics and also integrates these statuses into a single status estimate (e.g., Red, Amber, Green).  By automating this process, the Salmon Scanner supports implementation of Canada's WSP by rapidly approximating the more detailed, comprehensive WSP status assessment process. The Salmon Scanner’s approach can be implemented annually and for a broader range of CUs, given it is less time and labour intensive that full WSP status assessments. The Salmon Scanner was developed using Classification and Regression Tree (CART) analyses, and expert judgement gained from integrated status assessment processes, to create algorithms that approximate the integrated status assessment results. 
 
-
-The Salmon Scanner supports implementation of Canada's WSP by approximating the outcomes of detailed WSP Integrated Status Assessments. The Salmon Scanner’s approach can be implemented annually and for a broader range of CUs, given it is less time and labour intensive that full WSP status assessments. The Salmon Scanner was developed using Classification and Regression Tree (CART) analyses, and expert judgement gained from integrated status assessment processes, to create algorithms that approximate the integrated status assessment results. 
-
-
-Data inputs and outcomes from previous WSP assessment processes were used in the Salmon Scanners analyses: Fraser River Sockeye, Interior Fraser Coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020]. The algorithm was verified with data and local expertise on assessed status for Fraser River Chum and Pink Salmon (Pestal et al. in prep ). <!--CH comment: may need to change the pestal citation to S. Grant, pers comm.  I'm not sure how much the Pink and Chum work will be captured in the report?-->. Briefly, the Salmon Scanner uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). As with other methods, an expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers. comm.). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm them based on expert opinion. In practice, results from the Salmon Scanner will be validated against local expertise when implemented annually (S. Grant, pers. comm.). 
+Data inputs and outcomes from previous WSP assessment processes were used in the Salmon Scanners analyses: Fraser River Sockeye, Interior Fraser Coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020]. The algorithm was verified with data and local expertise (Pestal et al. in prep ). Briefly, the Salmon Scanner uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). As with other methods, an expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers. comm.). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm them based on expert opinion. In practice, results from the Salmon Scanner will be validated against local expertise when implemented annually (S. Grant, pers. comm.). 
 
 <!-- 
 LW: Do we want to say anything about how the decision tree we used could also be updated? 
 LW: Do we want to say anything about whether local experts could add nodes to the decision tree, e.g., for spatial distribution, impacts to wildlife, etc. as identified as imoprtant for CU status at the local level?)
+
+Luke and Carrie - if either of you has access to the full Pestal et al. report that describe either of the above aspects, please feel free to add them in. Or, if you have a pers. comm. from Sue on this.  I am hesitant to add it myself as I don't know that I've talked to Sue about this. It seems logical, and is likely what they have planned, but I'm not sure enough to add text myself.  These may be details that come later on when Sue puts the Salmon Scanner through CSAS this year???? 
+
 -->
 
 
