--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -11,14 +11,14 @@ output:
 
 The Interior Fraser Coho SMU is well-suited for looking at the application of aggregate abundance-based LRPs due to the long history of using aggregate abundance-based recovery targets and fisheries reference points based on an underlying relationship between aggregate abundance and the distribution of abundance among sub-populations and CUs. Furthermore, it is a relatively data-rich SMU with spawner-recruitment time series available for all CUs starting in 1998.
 
-The SMU includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. Like most Coho Salmon, Interior Fraser Coho spend at least one full year in freshwater as fry before migrating to the ocean as smolts [@arbeiderInteriorFraserCoho2020]. Most (88%) Interior Fraser Coho have a 3-year life history, in which they leave freshwater in their second year and spend 18 months at sea prior to returning to their natal system to spawn. The remaining 12% have a 4-year life history in which they spend an additional year in freshwater before migrating as smolts in their third year. Both the 3-year and 4-year life histories spend 18 months at sea. Less than 1% of Interior Fraser Coho are believed to return as jacks (precocious mature males that spend only 6 months as sea) or at ages older than 4 years [@arbeiderInteriorFraserCoho2020].
+The SMU includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hells Gate in the Fraser Canyon. Like most Coho Salmon, Interior Fraser Coho spend at least one full year in freshwater as fry before migrating to the ocean as smolts [@arbeiderInteriorFraserCoho2020]. Most (88%) Interior Fraser Coho have a 3-year life history, in which they leave freshwater in their second year and spend 18 months at sea prior to returning to their natal system to spawn. The remaining 12% have a 4-year life history in which they spend an additional year in freshwater before migrating as smolts in their third year. Both the 3-year and 4-year life histories spend 18 months at sea. Less than 1% of Interior Fraser Coho are believed to return as jacks (precocious mature males that spend only 6 months as sea) or at ages older than 4 years [@arbeiderInteriorFraserCoho2020].
 
 Five WSP CUs have been identified for Interior Fraser Coho based on genetics and geographic separation: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015; Figure \@ref(fig:coho-map)]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundance above a 1000-spawner threshold in each of these smaller subpopulation units [@ifcrtConservationStrategyCoho2006, Table \@ref(tab:cohoCU2SP)]. The delineation of subpopulations was based on several factors, including the presence of natural barriers, the influence of large lakes on downstream discharge and thermal regimes, observations of spawner aggregations under differing discharge conditions, and genetic differentiation. The 11 subpopulations are described in detail by the @ifcrtConservationStrategyCoho2006.  
 
-Only the upper portion of the Fraser Canyon CU (upstream of Hell's Gate on the Fraser River) is included in our delineation of Interior Fraser Coho. This delineation is consistent with previous analyses for this SMU. As a result, Nahatlatch is the only sub-population included in our description of the Fraser Canyon CU. Kawakawa Creek has been excluded.
+Only the upper portion of the Fraser Canyon CU (upstream of Hells Gate on the Fraser River) is included in our delineation of Interior Fraser Coho. This delineation is consistent with previous analyses for this SMU. As a result, Nahatlatch is the only sub-population included in our description of the Fraser Canyon CU. Kawakawa Creek has been excluded.
 
 
-```{r coho-map, fig.cap="Distribution of the Interior Fraser Coho SMU, including the five CUs that make up the SMU. Only the upper portion of the Fraser Canyon CU (upstream of Hell's Gate) is shown here to be consistent with the spatial scale of the data that was used for analyses.", out.width = '70%', warning=FALSE, echo=FALSE, fig.align="center"}
+```{r coho-map, fig.cap="Distribution of the Interior Fraser Coho SMU, including the five CUs that make up the SMU. Only the upper portion of the Fraser Canyon CU (upstream of Hells Gate) is shown here to be consistent with the spatial scale of the data that was used for analyses.", out.width = '70%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-map.png")
 ```
 
@@ -49,7 +49,7 @@ Hatchery enhancement has occurred, and continues to occur in some parts of the I
 
 The five Interior Fraser Coho CUs have historically shown relatively high levels of covariation in escapement among CUs, with an average correlation in spawner abundances among CUS of 0.56. Similarity among CU responses to environmental and anthropogenic drivers is further supported by application of the four criteria proposed by Holt et al. (in review) to evaluate the extent to which status of data deficient CUs can be inferred from CUs with data. A summary of our consideration of these criteria for Interior Fraser Coho are provided in Appendix \@ref(app:coho-appendix)). Results showed that Interior Fraser Coho CUs have many shared characteristics. We found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses.
 
-Interior Fraser Coho is included in the first batch of major stocks proposed for regulation under the Fish Stock Provisions of the revised Fisheries Act, necessitating the development of LRPs for this SMU.
+Interior Fraser Coho is included in the first batch of major stocks proposed for regulation under the Fish Stock provisions of the revised Fisheries Act, necessitating the development of LRPs for this SMU.
 <!--KH: I have included this here to be consistent with WCVI chinook, but we should confirm at some point that this is publishable. Hopefully by the time this paper is published, batch 1 stocks will be prescribed .... -->
 
 ### Previous assessments
