--- a/caseStudyWP/appendix-coho.Rmd
+++ b/caseStudyWP/appendix-coho.Rmd
@@ -26,18 +26,10 @@ Finally, we use the estimated S~REP~, which is the spawner abundance at which th
 Based on similarities in threats, life history, population capacity, and some shared environmental drivers (i.e., lower Fraser River, estuary, and marine environments), we found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses, especially when data from several other CUs are available to represent the missing CU. However, the large diversity in environmental conditions on land, Biogeoclimatic zones, and unique weather events, combined with the generally large areas encompassed by each CU, does require careful consideration when inferring CU status. For example, consideration may be required when environmental catastrophes occur that only impact individual CUs, or parts of CUs, such as landslides, floods, droughts, and forest fires; depending on the duration of the impacts of such events. An example of a recent catastrophic event is the Big Bar landslide, which only impacted one subpopulation within the Middle Fraser CU.If the impacts of this slide persist without mitigation, the status of the Middle Fraser CU would likely not be coupled with adjacent CUs. We also note that the Fraser Canyon CU may be the most unique in terms of it having the smallest capacity and a more coastal dominated biogeoclimatic zone, so special consideration may be given to cases in which CU-level data is missing from Fraser Canyon.
 
 
-<!--CH: I think we can omit the Fraser Canyon sentence; any special characteristics for that CU are not shown in the results. 
-
-LW: I would be inclined to keep the Fraser Canyon note, seems relevant to this section, even if there isn't a direct implication on resutls. 
-
-KH: Michael has agreed with Fraser Canyon being a bit of an outlier in his mind, so I have left it as it.  I also added some additional text suggested by Michael about environmental catastrophies. (As an aside, I can' believe I had neglected to think about big bar for the Middle Fraser CU ...Michael added some text on this)
-
--->
-
-## Model Fits to Data
+## Parameter Estimates from Bayesian Stock Recruitment Models
 
 
-```{r coho-SrepPrior, fig.cap="Prior distribution of SREP used when fitting the Ricker\\_priorCap model.The red dashed line shows the maximum likelihood estimate of SRep from the base Ricker model stock recruitment fit. The mean of the SRep prior was set to 1.4 times the maximum likelihood estimate", warning=FALSE, echo=FALSE, out.width = '80%',  fig.align="center"}
+```{r coho-SrepPrior, fig.cap="Prior distribution for SRep (the spawner abundance level at which the stock replaces itself) used when fitting the Ricker\\_priorCap model. The red dashed line shows the maximum likelihood estimate of SRep from the base Ricker model stock recruitment fit. The mean of the SRep prior was set to 1.4 times the maximum likelihood estimate", warning=FALSE, echo=FALSE, out.width = '80%',  fig.align="center"}
 knitr::include_graphics("figure/coho-SrepPriorDist.png")
 ```
 
@@ -61,7 +53,7 @@ options(scipen=999, digits=2)
 # dat[dat$Variable == "sigma",3:6]<-round(dat[dat$Variable == "sigma",3:6],digits=2)
 # dat[dat$Variable == "gamma",3:6]<-round(dat[dat$Variable == "gamma",3:6],digits=2)
 
-csasdown::csas_table(dat, digits=2, booktabs = T, caption = "Summary of posterior distribution mean and quantiles (5%, 50%, and 95%) for stock recruit model parameters and Sgen lower benchmark from the Ricker model fit.")
+csasdown::csas_table(dat, digits=2, booktabs = T, caption = "Summary of posterior distribution mean and quantiles (5%, 50%, and 95%) for stock recruit model parameters and Sgen lower benchmark from the Ricker model fit.  The 'adjProd' parameter is the effective productivity, $\\alpha$', from Equation 15 in the main document.")
  
 ```
 
@@ -72,18 +64,50 @@ csasdown::csas_table(dat, digits=2, booktabs = T, caption = "Summary of posterio
 dat <- as.data.frame(read.csv("data/coho-postSummary-RickerCap.csv"))
 options(scipen=999, digits=2)
 
-csasdown::csas_table(dat, digits=2, booktabs = T, caption = "Summary of posterior distribution mean and quantiles (5%, 50%, and 95%) for stock recruit model parameters and Sgen lower benchmark from the Ricker\\_prioCap model fit.")
+csasdown::csas_table(dat, digits=2, booktabs = T, caption = "Summary of posterior distribution mean and quantiles (5%, 50%, and 95%) for stock recruit model parameters and Sgen lower benchmark from the Ricker\\_priorCap model fit. The 'adjProd' parameter is the effective productivity, $\\alpha$', from Equation 15 in the main document.")
  
 ```
 
 
 
-```{r coho-CUProjections-Ricker, fig.cap="Projected spawner abundances, for each of the five Interior Fraser Coho CUs, used to develop projection-based LRPs under the base Ricker model. The solid line shows the median spawning abundance in a projection year while the grey shading shows the 10th and 90th percentiles of spawner abundance", warning=FALSE, echo=FALSE, out.width = '80%',  fig.align="center"}
+
+```{r coho-Ricker-alphaPosts, fig.cap="Posterior distributions for Ricker $\\alpha$ parameters, by CU, obtained from fitting the base Ricker stock recruitment model.", warning=FALSE, echo=FALSE, out.width = '60%',  fig.align="center"}
+knitr::include_graphics("figure/coho-alphaPosts.png")
+```
+
+
+
+
+```{r coho-Ricker-adjProdPosts, fig.cap="Posterior distributions for effective productivity ($\\alpha$') parameters, by CU, obtained from fitting the base Ricker stock recruitment model.", warning=FALSE, echo=FALSE, out.width = '60%',  fig.align="center"}
+knitr::include_graphics("figure/coho-adjProdPosts.png")
+```
+
+
+
+```{r coho-priorCap-alphaPosts, fig.cap="Posterior distributions for Ricker $\\alpha$ parameters, by CU, obtained from fitting the Ricker\\_priorCap stock recruitment model.", warning=FALSE, echo=FALSE, out.width = '60%',  fig.align="center"}
+knitr::include_graphics("figure/coho-alphaPosts-priorCap.png")
+```
+
+
+```{r coho-priorCap-adjProdPosts, fig.cap="Posterior distributions for effective productivity ($\\alpha$') parameters, by CU, obtained from fitting the Ricker\\_priorCap stock recruitment model.", warning=FALSE, echo=FALSE, out.width = '60%',  fig.align="center"}
+knitr::include_graphics("figure/coho-adjProdPosts-priorCap.png")
+```
+
+
+\newpage
+
+
+## Projected Spawner Abundances used for the Projection LRP Method
+
+```{r coho-CUProjections-Ricker, fig.cap="Projected spawner abundances, for each of the five Interior Fraser Coho CUs, used to develop projection LRPs under the base Ricker model. The solid line shows the median spawning abundance in a projection year while the grey shading shows the 10th and 90th percentiles of spawner abundance", warning=FALSE, echo=FALSE, out.width = '80%',  fig.align="center"}
 knitr::include_graphics("figure/coho-CUSpawnerProj-Ricker.png")
 ```
 
 
 
-```{r coho-CUProjections-Ricker-priorCap, fig.cap="Projected spawner abundances, for each of the five Interior Fraser Coho CUs, used to develop projection-based LRPs under the Ricker-priorCap model. The solid line shows the median spawning abundance in a projection year while the grey shading shows the 10th and 90th percentiles of spawner abundance", warning=FALSE, echo=FALSE, out.width = '80%',  fig.align="center"}
+```{r coho-CUProjections-Ricker-priorCap, fig.cap="Projected spawner abundances, for each of the five Interior Fraser Coho CUs, used to develop projection LRPs under the Ricker\\_priorCap model. The solid line shows the median spawning abundance in a projection year while the grey shading shows the 10th and 90th percentiles of spawner abundance", warning=FALSE, echo=FALSE, out.width = '80%',  fig.align="center"}
 knitr::include_graphics("figure/coho-CUSpawnerProj-Ricker_priorCap.png")
 ```
+
+
+
